[gd_scene load_steps=13 format=2]

[ext_resource path="res://Textures/splashsreen/GermanGodotCommunityBanner.png" type="Texture" id=1]
[ext_resource path="res://Scenes/splash_screen/splash_screen.gd" type="Script" id=2]
[ext_resource path="res://Textures/splashsreen/wallpaper_gwj.png" type="Texture" id=3]
[ext_resource path="res://Textures/splashsreen/wild_cards/GWJ-20-WC-2.png" type="Texture" id=4]
[ext_resource path="res://Textures/splashsreen/wild_cards/GWJ-20-WC-1.png" type="Texture" id=5]
[ext_resource path="res://Textures/splashsreen/wild_cards/GWJ-20-WC-3.png" type="Texture" id=6]
[ext_resource path="res://Textures/Menus/HauptMenu/title.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Menus/HauptMenu/HauptMenu.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "GWJ_logo"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("parts/logo_gwj:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("parts/logo_com:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "game_name"
length = 12.0
tracks/0/type = "value"
tracks/0/path = NodePath("parts/kartenhand:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("parts/gamename:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 6.5, 8.4, 10, 12 ),
"transitions": PoolRealArray( 1, 3, 0.33, 0.435275, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1000 ), Vector2( 0, -1000 ), Vector2( 0, -500 ), Vector2( 0, -30 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("parts/gamename:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3, 6.3, 8.4, 9.4, 10, 12 ),
"transitions": PoolRealArray( 1, 0.225313, 1.23114, 0.517632, 1.51572, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -8.0, 7.0, -2.0, 0.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("parts/gamename:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3, 3.9, 10, 12 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("parts/logo_com:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 7 ),
"transitions": PoolRealArray( 2.14355, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 9.5
tracks/0/type = "value"
tracks/0/path = NodePath("parts/logo_gwj:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("parts/kartenhand:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.2, 3.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("parts/kartenhand/karte 1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4.8, 5.6, 6.2, 6.9, 7.5, 9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 3, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( -50, 5 ), Vector2( -95, 15 ), Vector2( -140, 32 ), Vector2( -180, 45 ), Vector2( -240, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("parts/kartenhand/karte 1:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 4.8, 7.5, 9 ),
"transitions": PoolRealArray( 1, 1, 3, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -25.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("parts/kartenhand/karte 3:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 4.8, 5.7, 6.3, 6.9, 7.7, 9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 3, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 50, 5 ), Vector2( 95, 15 ), Vector2( 140, 32 ), Vector2( 180, 45 ), Vector2( 240, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("parts/kartenhand/karte 3:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 4.8, 7.7, 9 ),
"transitions": PoolRealArray( 1, 1, 3, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 25.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("parts/kartenhand/karte 2:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 4.8, 5.6, 6.5, 7.3, 7.9, 8.5, 9 ),
"transitions": PoolRealArray( 1, 1, 1.86607, 0.287175, 2, 0.435275, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 3.0, -2.0, 0.0, -3.0, 2.0, 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("parts/kartenhand:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 2.9, 3.9, 4.4 ),
"transitions": PoolRealArray( 2.5, 0.297302, 1 ),
"update": 0,
"values": [ Vector2( 0, 1200 ), Vector2( 0, 200 ), Vector2( 0, 0 ) ]
}

[node name="splash_screen" type="Node2D"]
script = ExtResource( 2 )
main_menu = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GWJ_logo = SubResource( 1 )
anims/game_name = SubResource( 2 )
anims/goComDE_logo = SubResource( 3 )
anims/kartenhand = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="parts" type="Node2D" parent="."]
position = Vector2( 512.31, 296.717 )

[node name="logo_com" type="Node2D" parent="parts"]
visible = false
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.9, 0.9 )

[node name="Sprite" type="Sprite" parent="parts/logo_com"]
texture = ExtResource( 1 )

[node name="logo_gwj" type="Node2D" parent="parts"]
visible = false
modulate = Color( 1, 1, 1, 0 )

[node name="ColorRect" type="ColorRect" parent="parts/logo_gwj"]
margin_left = -2864.0
margin_top = -2256.0
margin_right = 3200.0
margin_bottom = 2191.0
color = Color( 0.054902, 0.117647, 0.172549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="parts/logo_gwj"]
texture = ExtResource( 3 )

[node name="kartenhand" type="Node2D" parent="parts"]
visible = false
position = Vector2( 0, 1118.38 )
scale = Vector2( 2.5, 2.5 )

[node name="karte 1" type="Sprite" parent="parts/kartenhand"]
position = Vector2( -240, 0 )
texture = ExtResource( 5 )

[node name="karte 2" type="Sprite" parent="parts/kartenhand"]
texture = ExtResource( 4 )

[node name="karte 3" type="Sprite" parent="parts/kartenhand"]
position = Vector2( 240, 0 )
texture = ExtResource( 6 )

[node name="gamename" type="Node2D" parent="parts"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -1000 )
scale = Vector2( 5, 5 )

[node name="rat_lab" type="Sprite" parent="parts/gamename"]
texture = ExtResource( 7 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
